Prevent layout overflow for long inline code snippets

--- a/src/global.css
+++ b/src/global.css
@@ -33,7 +33,7 @@
         margin-right: 1px;
         line-height: 1.4em;
         word-break: break-word;
-        white-space: nowrap;
+        /* white-space: nowrap; */
         font-weight: 500;
         font-size: 0.8em;
 
